# cygextreg

./: .editorconfig  .gitignore  LICENSE  Makefile.am  README.md  configure.ac  uncrustify.cfg
cygport/: .gitignore  cygextreg.cygport  cygregext.cygport  cygscript.cygport
examples/: (ಠ_ಠ).txt  args.sh  env.sh  щ(ಠ益ಠщ).sh
man/: Makefile.am  cygextreg.1  cygregext.1
src/: Makefile.am  app.cpp  app.hpp  command.hpp  cygregext.rc  elevated.cpp  elevated.hpp  exec.cpp  exec.hpp  ld.exe.stackdump  list.cpp  list.hpp  main.cpp  message.cpp  message.hpp  register.cpp  register.hpp  strconv.cpp  strconv.hpp  winerror.hpp
src/cmd/: command.hpp  exec.cpp  exec.hpp  list.cpp  list.hpp  register.cpp  register.hpp
src/env/: envvar.cpp  envvar.hpp
src/registry/: key.cpp  key.hpp  registry.cpp  registry.hpp
src/settings/: settings.cpp  settings.hpp
src/util/: cygpath.cpp  cygpath.hpp  elevated.cpp  elevated.hpp  message.cpp  message.hpp  shutil.cpp  shutil.hpp  strconv.cpp  strconv.hpp  winerror.cpp  winerror.hpp  winpath.cpp  winpath.hpp
